# routes/api/news.js
@@ -4,4 +4,6 @@ const ctrl = require('../../controllers/news');
 
 router.get('/getAll', ctrl.getAllNews);
 
+router.get('/search', ctrl.getNewsByQuery);
+
 module.exports = router;
